# simeis_TEV

./: .env.sample  .gitignore  CMakeLists.txt  Cargo.toml  README.md  TEV-1.1.4.deb  build_deb_docker.sh  metrics_issues_labels.py  mypackage.deb
.github/: CODEOWNERS  Dockerfile  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  default.md  feature_request.md
.github/workflows/: build_matrix.yml  changelog-release.yml  ci.yml  ci_todo_from_pr.yml  ci_todo_link_issue.yml  code-coverage.yml  dependabot-diy.yml  dependabot.yml  functional-tests.yml  functional_tests.yml  heavy-tests.yml  pr-release-branch.yml  pr_release_branch.yml  property-based-tests.yml  property_based_tests.yml  python-tests.yml  quality.yml  release.yml  run-tests.yml  sanity.yml
example/: droid.json  test_assign_trader.py  test_extraction.py  test_functional.py  test_market_sell.py  trader.py  watch_game.py
mypackage/DEBIAN/: control  postinst
mypackage/lib/systemd/system/: simeis-server.service
mypackage/usr/share/man/man1/: simeis-server.1
simeis-data/: Cargo.toml
simeis-data/src/: galaxy.rs  ship.rs
simeis-data/src/ship/: navigation.rs  upgrade.rs
simeis-server/: Cargo.toml
simeis-server/src/: api.rs  main.rs
tests/: propertybased.py
