[package]
name = "simeis-server"
version.workspace = true
edition = "2021"

[dependencies]
simeis-data = { path = "../simeis-data" }
urlencoding = "2.1.3"
ntex = { version = "2.11.0", features = ["compress", "tokio"] }

base64 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }

[features]
default = []
testing = ["simeis-data/testing"]

